Bug 1648733 - Report invalid and hidden form controls to console. r=dom-core,jjaschke

Differential Revision: https://phabricator.services.mozilla.com/D189459