dom/html/HTMLFormElement.h
@@ -598,6 +598,9 @@ class HTMLFormElement final : public nsGenericHTMLElement,
    */
   void MaybeFireFormRemoved();
 
+  MOZ_CAN_RUN_SCRIPT
+  void ReportInvalidUnfocusableElements();
+
   ~HTMLFormElement();
 };
 
